<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kanthi.projectmonitoring.Login.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="90dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:background="@drawable/poym_logo"
                android:layout_height="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="Welcome to \nPoym! "
                android:textColor="@color/welcome_color"
                android:textSize="36sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="22sp"
                android:text="Sign in"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/lato"
                android:textStyle="bold"
                android:textColor="@color/signi_in_color"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:text="Username"
                android:fontFamily="@font/lato"
                android:textStyle="bold"
                android:textColor="@color/welcome_color"
                android:layout_height="wrap_content" />
            <AutoCompleteTextView
                android:id="@+id/autoCompleteUsername"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:fontFamily="@font/lato"
                android:backgroundTint="@color/signi_in_color"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginBottom="14dp"
                android:textColor="@color/signi_in_color"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"/>
            <TextView
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:text="Password"
                android:fontFamily="@font/lato"
                android:textStyle="bold"
                android:textColor="@color/welcome_color"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:fontFamily="@font/lato"
                android:backgroundTint="@color/signi_in_color"
                android:textColor="@color/signi_in_color"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:fontFamily="@font/lato"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:textSize="18sp"
                android:background="@drawable/button_border"
                android:textColor="@color/white_color"
                android:id="@+id/login" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/forgot_password"
                android:fontFamily="@font/lato"
                android:paddingLeft="2dp"
                android:textColor="@color/signi_in_color"
                android:text="@string/forgot_password"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
