<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white_color"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:paddingTop="17dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="17dp"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/user_icon"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/bottom_purple"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:paddingLeft="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:textSize="14sp"
                    android:fontFamily="@font/lato"
                    android:text="@string/field_engineer"
                    android:textColor="@color/welcome_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="A1"
                    android:maxLines="1"
                    android:fontFamily="@font/lato"
                    android:textSize="14sp"
                    android:textColor="@color/welcome_color"
                    android:id="@+id/field_engineer"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:text="@string/sterlite"
                    android:textSize="14sp"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/welcome_color"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/field_sterlite"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="L - 5001"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/welcome_color"
                    android:maxLines="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:text="@string/location"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:textColor="@color/welcome_color"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:id="@+id/field_location"
                    android:text="Bangalore"
                    android:textSize="14sp"
                    android:fontFamily="@font/lato"
                    android:textStyle="bold"
                    android:textColor="@color/welcome_color"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/field_desigination"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:text="Supervisor"
                android:textColor="@color/welcome_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:text="@string/desigination"
                    android:textSize="14sp"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/welcome_color"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>