<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_margin="3dp"
            android:layout_height="wrap_content">
            <include layout="@layout/task_details" />
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato"
                    android:layout_marginLeft="8dp"
                    android:text="@string/task_name"
                    android:textColor="@color/black_color"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:hint="@string/task_name"
                    android:background="@null"
                    android:focusable="false"
                    android:fontFamily="@font/lato"
                    android:textStyle="bold"
                    android:id="@+id/task_name"
                    android:textSize="16sp"
                    android:layout_height="38dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:padding="0.5dp"
                android:background="@color/litgray"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato"
                    android:layout_marginLeft="8dp"
                    android:text="@string/task_type"
                    android:textColor="@color/black_color"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:hint="@string/task_type"
                    android:id="@+id/task_type"
                    android:focusable="false"
                    android:fontFamily="@font/lato"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_height="36dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:padding="0.5dp"
                android:background="@color/litgray"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:fontFamily="@font/lato"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp"
                    android:text="Target"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_color"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:hint="Target"
                    android:layout_marginLeft="6dp"
                    android:textStyle="bold"
                    android:paddingTop="4dp"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black_color"
                    android:gravity="center_vertical"
                    android:id="@+id/target"
                    android:textSize="16sp"
                    android:layout_height="34dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:id="@+id/unitmeasurementname"
                    android:textStyle="bold"
                    android:paddingTop="4dp"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black_color"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_height="34dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:padding="0.5dp"
                android:background="@color/litgray"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:fontFamily="@font/lato"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp"
                    android:text="Actual"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black_color"
                    android:layout_height="match_parent" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:hint="Actual"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/lato"
                    android:id="@+id/actual"
                    android:textStyle="bold"
                    android:textColor="@color/black_color"
                    android:focusable="true"
                    android:textSize="16sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:id="@+id/unitmeasurementname1"
                    android:textStyle="bold"
                    android:paddingTop="4dp"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black_color"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_height="34dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:id="@+id/per_layout"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/complete"
                    android:textColor="@color/black_color"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:hint="@string/complete"
                    android:focusable="false"
                    android:fontFamily="@font/lato"
                    android:clickable="true"
                    android:id="@+id/percentage_complete"
                    android:textSize="16sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/status"
                    android:fontFamily="@font/lato"
                    android:paddingTop="6dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black_color"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/spinner_border"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/sp_status"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:hint="@string/status"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato"
                    android:layout_marginLeft="8dp"
                    android:text="@string/Remark"
                    android:paddingTop="6dp"
                    android:textColor="@color/black_color"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/spinner_border"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:layout_width="match_parent"
                        android:hint="@string/Remark"
                        android:id="@+id/sp_remark"
                        android:textSize="16sp"
                        android:layout_height="34dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:id="@+id/spinner_layout"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/lato"
                    android:text="Review"
                    android:paddingTop="6dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black_color"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/spinner_border"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/sp_review"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:hint="@string/status"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/statusupdate_submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/yellow"
                    android:fontFamily="@font/lato"
                    android:text="@string/submit"
                    android:textColor="@color/white_color" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/bt_nav_card"
            android:layout_height="wrap_content">
            <include layout="@layout/button_navigation"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


